<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/patient_row_item"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/border">


    <CheckBox
        android:id="@+id/chkPatient"
        android:layout_width="36dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_weight="0"
        android:gravity="top" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:fontFamily="sans-serif"
                android:text="@string/tv1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatietNAME"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:fontFamily="sans-serif"
                android:text="@string/tv2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientNIC"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:fontFamily="sans-serif"
                android:text="@string/tv3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientADDRESS"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:fontFamily="sans-serif"
                android:text="@string/tv4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientAG"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:fontFamily="sans-serif"
                android:text="@string/tv5"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientDOB"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVreason"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:fontFamily="sans-serif"
                android:text="@string/tv7"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPATIENTReason"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:text="TextView" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_delete_forever_24" />
    </LinearLayout>

</LinearLayout>